tests/dict/mismatch_types.sy
start :: fn do
    a: {int: str} = {1: 1, 2: "abc", 1.0: 1}
    a
end
// error: $Mismatch
